--- a/tex/results.tex
+++ b/tex/results.tex
@@ -1,3 +1,6 @@
 \todo{what's done from the concept}
 \todo{still high-level}
 \todo{what problem is solved?}
+
+solved:
+"A model VCS should be tailored to existing model representation formats, which are typically XML and RDF based. It should furthermore reflect the temporal evolution of a model and present model changes to the users." \citep{Waltemath2013}
