moved 'compile at' note after title page

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -38,12 +38,15 @@
 \date{\today}
 
 \begin{document}
+	%title
 	\maketitle
-	\tableofcontents
-	
 	% info about compiling date
-	\vfill
-	{\tiny  \LaTeX ~compiled at \DTMnow}
+	\pagebreak
+	~ \vfill
+	{\hfill \tiny \LaTeX ~compiled at \DTMnow}
+	\pagebreak
+	% the toc
+	\tableofcontents
 	
 	\chapter{Introduction}
 	% comment command for Dagmar (defined in shortcuts.tex)
