include change suggestestions from ms

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -1,8 +1,6 @@
 % !TeX spellcheck = en_US
 \documentclass[12pt, a4paper, titlepage]{book}
 \usepackage[a4paper, margin=3cm]{geometry}
-%\setlength{\parindent}{0pt}
-%\setlength{\parskip}{14pt plus 5mm minus 4mm}
 %\usepackage{setspace}
 %\setstretch{1.5}
 
@@ -31,7 +29,7 @@
 
 \input{shortcuts.tex}
 
-\title{Conception and Prototype Implementation of a storage solution for Models with multiple Versions}
+\title{Conception and Prototypic Implementation of a Storage Solution for Models with Multiple Versions}
 \author{Martin Peters\\[12pt]
 	\small Department of Systems Biology and Bioinformatics\\
 	\small University of Rostock}
@@ -47,6 +45,10 @@
 	\pagebreak
 	% the toc
 	\tableofcontents
+	
+	% set paragraph indents
+	%\setlength{\parindent}{0pt}
+	%\setlength{\parskip}{12pt plus 4mm minus 3mm}
 	
 	\chapter{Introduction}
 	% comment command for Dagmar (defined in shortcuts.tex)
