--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -20,7 +20,7 @@
 \newcommand{\morre}{Morre\xspace}
 \newcommand{\bives}{BiVeS\xspace}
 \newcommand{\comodi}{COMODI\xspace}
-\newcommand{\neoj}{neo4j\xspace}
+\newcommand{\neoj}{Neo4j\xspace}
 \newcommand{\modelcrawler}{Model~Crawler\xspace}
 
 \newcommand{\sysbio}{Systems Biology\xspace}
