minor improvements in random places

--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -181,7 +181,7 @@
 	To overcome this issue, ontologies were introduced. "In philosophy, an ontology is a theory about the nature of existence, of what types of things exist; ontology as a discipline studies such theories" \citep{Berners-Lee2001}
 	In contrast computer science and more specifically the semantic web research, has borrowed this term, but uses it to describe a hierarchically structured group of terms or a taxonomy, together with a set of reasoning rules.
 	
-	To communicate and use these taxonomies the \owl standard was introduced \citep{Bechhofer2004,Bechhofer2009}. It encodes all terms, their relation, attributes and verbal description, as well as all rules.
+	To communicate and use these taxonomies and rule sets the \owl standard was introduced \citep{Bechhofer2004,Bechhofer2009}. It encodes all terms, their relation, attributes and verbal description, as well as all rules.
 	
 	\sysbio uses this technology not directly as initially intended by Berners-Lee et al. \citep{Berners-Lee2001}, but to annotate already machine readable data files, instead of data sources available over the web. They hereby serve the purpose of giving additional information about parts of a model or the model itself. The variety of available ontologies ranges from biological species identification (SBO\footnote{\url{http://bioportal.bioontology.org/ontologies/SBO}}), over the description of simulation algorithms and proceeding (KiSAO\footnote{\url{http://bioportal.bioontology.org/ontologies/KISAO}}) to the characterization of dynamics (TEDDY\footnote{\url{http://bioportal.bioontology.org/ontologies/TEDDY}}) \citep{Courtot2011}.
 	
