--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\section{Motivation}
+%\section{Motivation}
 "Scientific publications have at least two goals: (i) to announce a result and (ii) to convince readers that the result is correct" \citep{Mesirov2010}.
 This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation gets available to a broader audience by software packages and tools. Now people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point, mentioned by Mesirov. Also with increasing complexity it gets challenging to describe the complicated workflow within the word limitation of a normal publication.
 For instance biologists are now easily able to acquire large datasets form DNA or RNA sequencing, which are way to large for manual analyses. Those data needs to be sanitized, converted and condensed, to make sense out of it. Resulting publications often only pay little attention to the computational processes involved or even to the used algorithms \citep{Peng2011}.
